--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,9 @@
  * src/plugindata.h:
    Make GEANY_API_VERSION, GEANY_ABI_VERSION macros instead of enums
    so you can protect code with '#if GEANY_API_VERSION >= 200'.
+ * src/plugindata.h:
+   Warn about preprocessor testing GEANY_API_VERSION below 200 because
+   those tests will always fail.
 
 
 2010-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
