Add note to indentation prefs page about using Project->Apply Default Indentation for currently open documents.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5436 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * data/filetype_extensions.conf:
    Add *.latex pattern.
+ * src/interface.c, geany.glade:
+   Add note to indentation prefs page about using Project->Apply
+   Default Indentation for currently open documents.
 
 
 2010-11-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
