Update autotools-based build system for Scintilla.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/unstable@5441 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    remove unused lexers.
  * wscript:
    Update Waf-based build system for Scintilla.
+ * scintilla/Makefile.am, scintilla/include/Makefile.am:
+   Update autotools-based build system for Scintilla.
 
 
 2010-11-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
