--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-04-03  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/main.c, src/prefs.c, src/tools.c:
+   Fix loading and updating menu accelerators for custom commands.
+
+
 2011-04-02  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/tools.c, doc/geany.txt, doc/geany.html:
