--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-04-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * scintilla/*:
+   Update Scintilla to version 2.25.
+
+
 2011-04-03  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/main.c, src/prefs.c, src/tools.c:
