--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * scintilla/*:
    Update Scintilla to version 2.25.
+ * version.txt, Makefile.am:
+   Add Scintilla's version.txt file.
 
 
 2011-04-03  Colomban Wendling  <colomban(at)geany(dot)org>
