--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-04-04  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * scintilla/gtk/PlatGTK.cxx:
+   Fix font rendering in Scintilla when using Cairo.
+
+
 2011-04-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/interface.c, geany.glade:
