--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-04-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/templates.c:
+   Remove TEMPLATES_GET_FILENAME() macro.
+
+
 2011-04-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * scintilla/gtk/ScintillaGTK.cxx:
