Completely drop HAVE_GIO checks
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5861 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    doc/geany.html:
    Add an hidden pref to choose between GIO and plain C unsafe
    file saving.
+ * configure.ac, src/document.c, win32-config.h:
+   Completely drop HAVE_GIO checks.
 
 
 2011-06-18  Colomban Wendling  <colomban(at)geany(dot)org>
