Fix indentation brace matching (closes #3309606)
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5864 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * src/highlighting.c:
    Recognize C# and Vala raw and verbatim strings as string styles.
+ * src/editor.c:
+   Fix indentation brace matching (closes #3309606).
 
 
 2011-06-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
