--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-07-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * zh_TW.po: Update of Traditional Chinese translation. 
+             Thanks to Wei-Lun Chao for providing update. 
+
+
 2011-07-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * fr.po: Update of French translation. Thanks to Benjamin Ballet for
