--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2011-09-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
+ * en_GB.po: Update of British English translation. Thanks to Jeff Bailes.
  * es.po: Update of Spanish translation. Thanks to Lucas Vieites.
  * pt.po: Update of Portuguese translation. Thanks to André Glória.
  * pt_BR.po: Update of Brasilian Portuguese translation. Thanks to
