--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1,15 +1,15 @@
 # British English translation of geany.
-# Copyright (C) 2007-2010 THE geany'S COPYRIGHT HOLDER
+# Copyright (C) 2007-2011 THE geany'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the geany package.
-# Jeff Bailes <thepizzaking@gmail.com>, 2007-2010.
+# Jeff Bailes <thepizzaking@gmail.com>, 2007-2011.
 #
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: geany 0.20\n"
+"Project-Id-Version: geany 0.21\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-09-17 09:51+0200\n"
-"PO-Revision-Date: 2010-12-13 18:12+1100\n"
+"POT-Creation-Date: 2011-09-19 18:26+0200\n"
+"PO-Revision-Date: 2011-09-18 13:27+1000\n"
 "Last-Translator: Jeff Bailes <thepizzaking@gmail.com>\n"
 "Language-Team: British English <geany-i18n@uvena.de>\n"
 "Language: \n"
@@ -216,42 +216,37 @@ msgid "Working directory"
 msgstr "Working directory"
 
 #: ../src/build.c:1847
-#, fuzzy
 msgid "Reset"
-msgstr "Zoom Reset"
+msgstr "Reset"
 
 #: ../src/build.c:1892
 msgid "Click to set menu item label"
 msgstr "Click to set menu item label"
 
 #: ../src/build.c:1976 ../src/build.c:1978
-#, fuzzy, c-format
+#, c-format
 msgid "%s commands"
-msgstr "%s Commands"
+msgstr "%s commands"
 
 #: ../src/build.c:1978
-#, fuzzy
 msgid "No filetype"
-msgstr "No Filetype"
+msgstr "No filetype"
 
 #: ../src/build.c:1987 ../src/build.c:2022
-#, fuzzy
 msgid "Error regular expression:"
-msgstr "Error Regular Expression:"
+msgstr "Error regular expression:"
 
 #: ../src/build.c:2015
-#, fuzzy
 msgid "Independent commands"
-msgstr "Independent Commands"
+msgstr "Independent commands"
 
 #: ../src/build.c:2047
 msgid "Note: Item 2 opens a dialog and appends the response to the command."
 msgstr "Note: Item 2 opens a dialogue and appends the response to the command."
 
 #: ../src/build.c:2056
-#, fuzzy
 msgid "Execute commands"
-msgstr "Execute Commands"
+msgstr "Execute commands"
 
 #: ../src/build.c:2068
 #, c-format
@@ -702,9 +697,9 @@ msgid "Setting %s indentation mode for %s."
 msgstr "Setting %s indentation mode for %s."
 
 #: ../src/document.c:1100
-#, fuzzy, c-format
+#, c-format
 msgid "Setting indentation width to %d for %s."
-msgstr "Setting %s indentation mode for %s."
+msgstr "Setting indentation width to %d for %s."
 
 #: ../src/document.c:1137 ../src/document.c:1737
 msgid "Invalid filename"
@@ -1001,9 +996,8 @@ msgid "None"
 msgstr "None"
 
 #: ../src/filetypes.c:304
-#, fuzzy
 msgid "Shell script"
-msgstr "Shell script file"
+msgstr "Shell script"
 
 #: ../src/filetypes.c:312
 msgid "Makefile"
@@ -1038,9 +1032,8 @@ msgid "_Markup Languages"
 msgstr "_Markup Languages"
 
 #: ../src/filetypes.c:716
-#, fuzzy
 msgid "M_iscellaneous"
-msgstr "Miscellaneous"
+msgstr "M_iscellaneous"
 
 #: ../src/filetypes.c:1431 ../src/win32.c:105
 msgid "All Source"
@@ -1387,9 +1380,8 @@ msgid "In_dent Type"
 msgstr "In_dent Type"
 
 #: ../src/interface.c:994 ../src/interface.c:1028
-#, fuzzy
 msgid "_Detect from Content"
-msgstr "Detect from file"
+msgstr "_Detect from Content"
 
 #: ../src/interface.c:1003 ../src/interface.c:3948 ../src/interface.c:5666
 msgid "_Tabs"
@@ -1990,19 +1982,16 @@ msgid "<b>Tab positions</b>"
 msgstr "<b>Tab positions</b>"
 
 #: ../src/interface.c:3576
-#, fuzzy
 msgid "Notebook tabs"
-msgstr "Notebook tab"
+msgstr "Notebook tabs"
 
 #: ../src/interface.c:3607
-#, fuzzy
 msgid "Show t_oolbar"
-msgstr "Show T_oolbar"
+msgstr "Show t_oolbar"
 
 #: ../src/interface.c:3611
-#, fuzzy
 msgid "_Append toolbar to the menu"
-msgstr "_Append Toolbar to the Menu"
+msgstr "_Append toolbar to the menu"
 
 #: ../src/interface.c:3614
 msgid "Pack the toolbar to the main menu to save vertical space"
@@ -2013,54 +2002,44 @@ msgid "Customize Toolbar"
 msgstr "Customise Toolbar"
 
 #: ../src/interface.c:3656
-#, fuzzy
 msgid "System _default"
-msgstr "System _Default"
+msgstr "System _default"
 
 #: ../src/interface.c:3664
-#, fuzzy
 msgid "Images _and text"
-msgstr "Images _and Text"
+msgstr "Images _and text"
 
 #: ../src/interface.c:3672
-#, fuzzy
 msgid "_Images only"
-msgstr "_Images Only"
+msgstr "_Images only"
 
 #: ../src/interface.c:3680
-#, fuzzy
 msgid "_Text only"
-msgstr "_Text Only"
+msgstr "_Text only"
 
 #: ../src/interface.c:3688
-#, fuzzy
 msgid "<b>Icon style</b>"
-msgstr "<b>Icon Style</b>"
+msgstr "<b>Icon style</b>"
 
 #: ../src/interface.c:3709
-#, fuzzy
 msgid "S_ystem default"
-msgstr "S_ystem Default"
+msgstr "S_ystem default"
 
 #: ../src/interface.c:3717
-#, fuzzy
 msgid "_Small icons"
-msgstr "_Small Icons"
+msgstr "_Small icons"
 
 #: ../src/interface.c:3725
-#, fuzzy
 msgid "_Very small icons"
-msgstr "_Very Small Icons"
+msgstr "_Very small icons"
 
 #: ../src/interface.c:3733
-#, fuzzy
 msgid "_Large icons"
-msgstr "_Large Icons"
+msgstr "_Large icons"
 
 #: ../src/interface.c:3741
-#, fuzzy
 msgid "<b>Icon size</b>"
-msgstr "<b>Icon Size</b>"
+msgstr "<b>Icon size</b>"
 
 #: ../src/interface.c:3746
 msgid "<b>Toolbar</b>"
@@ -2207,9 +2186,8 @@ msgid "Match braces"
 msgstr "Match braces"
 
 #: ../src/interface.c:3923 ../src/interface.c:5641
-#, fuzzy
 msgid "Detect type from file"
-msgstr "Detect from file"
+msgstr "Detect type from file"
 
 #: ../src/interface.c:3928 ../src/interface.c:5646
 msgid ""
@@ -2220,9 +2198,8 @@ msgstr ""
 "opened"
 
 #: ../src/interface.c:3930 ../src/interface.c:5648
-#, fuzzy
 msgid "T_abs and spaces"
-msgstr "T_abs and Spaces"
+msgstr "T_abs and spaces"
 
 #: ../src/interface.c:3935 ../src/interface.c:5653
 msgid ""
@@ -2239,17 +2216,15 @@ msgid "Use one tab per indent"
 msgstr "Use one tab per indent"
 
 #: ../src/interface.c:3957 ../src/interface.c:5682
-#, fuzzy
 msgid "Detect width from file"
-msgstr "Detect from file"
+msgstr "Detect width from file"
 
 #: ../src/interface.c:3962 ../src/interface.c:5687
-#, fuzzy
 msgid ""
 "Whether to detect the indentation width from file contents when a file is "
 "opened"
 msgstr ""
-"Whether to detect the indentation type from file contents when a file is "
+"Whether to detect the indentation width from file contents when a file is "
 "opened"
 
 #: ../src/interface.c:3964 ../src/interface.c:4254 ../src/interface.c:5675
@@ -2356,7 +2331,7 @@ msgstr "Maximum number of entries to display in the autocompletion list"
 
 #: ../src/interface.c:4086
 msgid "Symbol list update frequency:"
-msgstr ""
+msgstr "Symbol list update frequency:"
 
 #: ../src/interface.c:4099
 msgid ""
@@ -2364,6 +2339,9 @@ msgid ""
 "list. Note that a too short delay may have performance impact, especially "
 "with large files. A delay of 0 disables real-time updates."
 msgstr ""
+"Minimal delay (in milliseconds) between two automatic updates of the symbol "
+"list. Note that a too short delay may have performance impact, especially "
+"with large files. A delay of 0 disables real-time updates."
 
 #: ../src/interface.c:4102
 msgid "<b>Completions</b>"
@@ -2794,9 +2772,8 @@ msgid "Date:"
 msgstr "Date:"
 
 #: ../src/interface.c:4840
-#, fuzzy
 msgid "Date & time:"
-msgstr "Date & Time:"
+msgstr "Date & time:"
 
 #: ../src/interface.c:4852
 msgid ""
@@ -2921,17 +2898,15 @@ msgstr "Printing"
 
 #: ../src/interface.c:5097
 msgid "<i>Warning: read the manual before changing these preferences.</i>"
-msgstr ""
+msgstr "<i>Warning: read the manual before changing these preferences.</i>"
 
 #: ../src/interface.c:5102
-#, fuzzy
 msgid "<b>Various preferences</b>"
-msgstr "<b>Virtual spaces</b>"
+msgstr "<b>Various preferences</b>"
 
 #: ../src/interface.c:5107 ../src/prefs.c:1583
-#, fuzzy
 msgid "Various"
-msgstr "_Previous"
+msgstr "Various"
 
 #: ../src/interface.c:5589
 msgid "Project Properties"
@@ -3406,9 +3381,8 @@ msgid "Remove Error Indicators"
 msgstr "Remove Error Indicators"
 
 #: ../src/keybindings.c:535
-#, fuzzy
 msgid "Remove Markers and Error Indicators"
-msgstr "Remove Error Indicators"
+msgstr "Remove Markers and Error Indicators"
 
 #: ../src/keybindings.c:537 ../src/keybindings.c:542 ../src/project.c:484
 #: ../src/ui_utils.c:1947
@@ -3662,7 +3636,7 @@ msgstr "_Plugin Manager"
 #: ../src/plugins.c:1160
 #, c-format
 msgid "%s %s"
-msgstr ""
+msgstr "%s %s"
 
 #: ../src/plugins.c:1236
 msgid "Active"
@@ -3689,9 +3663,8 @@ msgid "<b>Plugin details:</b>"
 msgstr "<b>Plugin details:</b>"
 
 #: ../src/plugins.c:1403
-#, fuzzy
 msgid "Plugin:"
-msgstr "Plugin"
+msgstr "Plugin:"
 
 #: ../src/plugins.c:1404 ../src/project.c:446
 msgid "Description:"
@@ -3699,7 +3672,7 @@ msgstr "Description:"
 
 #: ../src/plugins.c:1405
 msgid "Author(s):"
-msgstr ""
+msgstr "Author(s):"
 
 #: ../src/pluginutils.c:334
 msgid "Configure Plugins"
@@ -3894,9 +3867,8 @@ msgid "Choose Project Base Path"
 msgstr "Choose Project Base Path"
 
 #: ../src/project.c:196 ../src/project.c:575
-#, fuzzy
 msgid "Project file could not be written"
-msgstr "Project file could not be written (%s)."
+msgstr "Project file could not be written"
 
 #: ../src/project.c:199
 #, c-format
@@ -3930,6 +3902,8 @@ msgid ""
 "Space separated list of file patterns used for the find in files dialog (e."
 "g. *.c *.h)"
 msgstr ""
+"Space separated list of file patterns used for the find in files dialogue (e."
+"g. *.c *.h)"
 
 #: ../src/project.c:578
 #, c-format
@@ -4092,17 +4066,15 @@ msgstr "Replace all matches found in the currently selected text"
 
 #: ../src/search.c:831
 msgid "all"
-msgstr ""
+msgstr "all"
 
 #: ../src/search.c:833
-#, fuzzy
 msgid "project"
-msgstr "projects"
+msgstr "project"
 
 #: ../src/search.c:835
-#, fuzzy
 msgid "custom"
-msgstr "Custom"
+msgstr "custom"
 
 #: ../src/search.c:839
 msgid ""
@@ -4110,6 +4082,9 @@ msgid ""
 "Project: use file patterns defined in the project settings\n"
 "Custom: specify file patterns manually"
 msgstr ""
+"All: search all files in the directory\n"
+"Project: use file patterns defined in the project settings\n"
+"Custom: specify file patterns manually"
 
 #: ../src/search.c:906
 msgid "Fi_les:"
@@ -4276,7 +4251,7 @@ msgstr "Functions"
 
 #: ../src/symbols.c:708
 msgid "Program"
-msgstr ""
+msgstr "Program"
 
 #: ../src/symbols.c:710 ../src/symbols.c:718 ../src/symbols.c:724
 msgid "Sections"
@@ -4284,16 +4259,15 @@ msgstr "Sections"
 
 #: ../src/symbols.c:711
 msgid "Paragraph"
-msgstr ""
+msgstr "Paragraph"
 
 #: ../src/symbols.c:712
-#, fuzzy
 msgid "Group"
-msgstr "Group:"
+msgstr "Group"
 
 #: ../src/symbols.c:713
 msgid "Data"
-msgstr ""
+msgstr "Data"
 
 #: ../src/symbols.c:719
 msgid "Keys"
@@ -4449,21 +4423,19 @@ msgstr "Targets"
 
 #: ../src/symbols.c:954
 msgid "Indexes"
-msgstr ""
+msgstr "Indexes"
 
 #: ../src/symbols.c:955
-#, fuzzy
 msgid "Tables"
-msgstr "Variables"
+msgstr "Tables"
 
 #: ../src/symbols.c:956
 msgid "Triggers"
-msgstr ""
+msgstr "Triggers"
 
 #: ../src/symbols.c:957
-#, fuzzy
 msgid "Views"
-msgstr "View"
+msgstr "Views"
 
 #: ../src/symbols.c:976
 msgid "Structs"
@@ -4543,7 +4515,7 @@ msgstr "Sort by _Appearance"
 #: ../src/templates.c:77
 #, c-format
 msgid "Failed to convert template file \"%s\" to UTF-8"
-msgstr ""
+msgstr "Failed to convert template file \"%s\" to UTF-8"
 
 #. custom actions defined in toolbar_init(): "New", "Open", "SearchEntry", "GotoEntry", "Build"
 #: ../src/toolbar.c:56
@@ -4693,14 +4665,13 @@ msgid "Displayed Items"
 msgstr "Displayed Items"
 
 #: ../src/tools.c:110 ../src/tools.c:115
-#, fuzzy, c-format
+#, c-format
 msgid "Invalid command: %s"
-msgstr "Run command:"
+msgstr "Invalid command: %s"
 
 #: ../src/tools.c:110
-#, fuzzy
 msgid "Command not found"
-msgstr "\"%s\" was not found."
+msgstr "Command not found"
 
 #: ../src/tools.c:256
 #, c-format
@@ -4739,7 +4710,7 @@ msgstr ""
 
 #: ../src/tools.c:522
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #: ../src/tools.c:708
 msgid "No custom commands defined."
@@ -4888,15 +4859,16 @@ msgid "Close All"
 msgstr "Close All"
 
 #: ../src/utils.c:89
-#, fuzzy
 msgid "Select Browser"
-msgstr "File Browser"
+msgstr "Select Browser"
 
 #: ../src/utils.c:90
 msgid ""
 "Failed to spawn the configured browser command. Please correct it or enter "
 "another one."
 msgstr ""
+"Failed to spawn the configured browser command. Please correct it or enter "
+"another one."
 
 #: ../src/utils.c:368
 msgid "Win (CRLF)"
@@ -5081,19 +5053,16 @@ msgid "Create Class"
 msgstr "Create Class"
 
 #: ../plugins/classbuilder.c:453
-#, fuzzy
 msgid "Create C++ Class"
-msgstr "Create Class"
+msgstr "Create C++ Class"
 
 #: ../plugins/classbuilder.c:456
-#, fuzzy
 msgid "Create GTK+ Class"
-msgstr "Create Class"
+msgstr "Create GTK+ Class"
 
 #: ../plugins/classbuilder.c:459
-#, fuzzy
 msgid "Create PHP Class"
-msgstr "Create Class"
+msgstr "Create PHP Class"
 
 #: ../plugins/classbuilder.c:476
 msgid "Namespace"
@@ -5160,9 +5129,8 @@ msgid "Is singleton"
 msgstr "Is singleton"
 
 #: ../plugins/classbuilder.c:587
-#, fuzzy
 msgid "Constructor type:"
-msgstr "GTK+ constructor type"
+msgstr "Constructor type:"
 
 #: ../plugins/classbuilder.c:1096
 msgid "Create Cla_ss"
@@ -5297,13 +5265,12 @@ msgid "Export File"
 msgstr "Export File"
 
 #: ../plugins/export.c:191
-#, fuzzy
 msgid "_Insert line numbers"
-msgstr "Print line numbers"
+msgstr "_Insert line numbers"
 
 #: ../plugins/export.c:193
 msgid "Insert line numbers before each line in the exported document"
-msgstr ""
+msgstr "Insert line numbers before each line in the exported document"
 
 #: ../plugins/export.c:203
 msgid "_Use current zoom level"
@@ -5394,11 +5361,12 @@ msgid "Filter:"
 msgstr "Filter:"
 
 #: ../plugins/filebrowser.c:922
-#, fuzzy
 msgid ""
 "Filter your files with the usual wildcards. Separate multiple patterns with "
 "a space."
-msgstr "Filter your files with usual wildcards"
+msgstr ""
+"Filter your files with the usual wildcards. Separate multiple patterns with "
+"a space."
 
 #: ../plugins/filebrowser.c:1137
 msgid "Focus File List"
@@ -5432,9 +5400,8 @@ msgid "Show hidden files"
 msgstr "Show hidden files"
 
 #: ../plugins/filebrowser.c:1256
-#, fuzzy
 msgid "Hide file extensions:"
-msgstr "Detect by file extension"
+msgstr "Hide file extensions:"
 
 #: ../plugins/filebrowser.c:1281
 msgid "Use the project's base directory"
@@ -5561,13 +5528,12 @@ msgid "_Split Window"
 msgstr "_Split Window"
 
 #: ../plugins/splitwindow.c:416
-#, fuzzy
 msgid "_Side by Side"
-msgstr "H_ide Sidebar"
+msgstr "_Side by Side"
 
 #: ../plugins/splitwindow.c:421
 msgid "_Top and Bottom"
-msgstr ""
+msgstr "_Top and Bottom"
 
 #: ../plugins/splitwindow.c:437
 msgid "Split Horizontally"
