--- a/HACKING
+++ b/HACKING
@@ -98,7 +98,7 @@ See `Committing`_ for more information.
 
 Windows tools
 -------------
-* Git: http://git-scm.com/ and http://code.google.com/p/msysgit/
+* Git: http://git-scm.com/ and http://msysgit.github.io/
 * diff, grep, etc: http://mingw.org/ or http://unxutils.sourceforge.net/
 
 See also the 'Building on Windows' document on the website.
